fix idea popin clicked from synthesis was too big. add a title to the popin

--- a/assembl/static/css/components/_panel.scss
+++ b/assembl/static/css/components/_panel.scss
@@ -238,7 +238,7 @@ _:-ms-input-placeholder, :root .groupBody.editable .groupPanel header ~ .panelCo
   //height: 100vh; need hack safari
 }
 
-#groupsContainer {
+#groupContainer > .groupsContainer {
   width: 100%;
 }
 
